nicer collapsed sidebar - changing z-index of sidebar so fixing other components too

--- a/app/app.less
+++ b/app/app.less
@@ -31,6 +31,17 @@ h4 {
   font-size: 1.5em;
 }
 
+a:focus, a:active,
+button::-moz-focus-inner,
+input[type="reset"]::-moz-focus-inner,
+input[type="button"]::-moz-focus-inner,
+input[type="submit"]::-moz-focus-inner,
+select::-moz-focus-inner,
+input[type="file"] > input[type="button"]::-moz-focus-inner {
+  border: 0;
+  outline : 0;
+}
+
 .container-fluid {
   margin-left: 10px;
   margin-right: 10px;
@@ -67,10 +78,11 @@ h4 {
 /* Navigation */
 
 #wrapper {
-  border: 1px #0000ff solid;
+  border: 0;
   padding-left: @sidebar_max;
   .transition(all 0.5s ease);
   background-color: @sidebar-bg;
+  z-index: -1 !important;
 }
 
 #wrapper.toggled {
@@ -85,13 +97,15 @@ h4 {
   background-color: @white;
   margin-top: 51px;
   width: 100%;
+  z-index: 10 !important;
+
 
   h3.section-title, h3.page-title {
     background-color: #fafbfc;
     border-bottom: 1px solid #cfdbe2;
     box-shadow: 0 1px 2px rgba(0,0,0,0.15);
     vertical-align: middle;
-    margin: 0 -15px 15px -15px;
+    margin: 0 -25px 15px -25px;
     padding: 10px 10px 10px 15px;
   }
 }
