--- a/app/components/topnav/topnav.less
+++ b/app/components/topnav/topnav.less
@@ -6,6 +6,8 @@
   border-radius: 0;
   font-family: 'open-sans', helvetica, arial, sans-serif;
   margin-bottom: 0;
+  z-index: 1002;
+  overflow: visible;
 }
 
 .navbar-inverse {
@@ -72,7 +74,10 @@
 }
 
 ul#dropdown-user {
-  min-width: 100px;
+  min-width: 120px;
+  left: -55px;
+  box-shadow: 0 5px 10px rgba(0,0,0,.2);
+  cursor: pointer;
 }
 
 @media screen and (max-width: 600px) {
